crates/linkage-blaze-core/tests/ui_fail/freeze_param_name_duplicate.stderr
error[E0080]: evaluation panicked: freeze name is ambiguous
 --> tests/ui_fail/freeze_param_name_duplicate.rs:8:36
  |
8 | const BAD: LinkageFixed<1, 0, 4> = LINKAGE.freeze_param_name("Bruce", 0.0);
  |                                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ evaluation of `BAD` failed inside this call
  |
note: inside `LinkageFixed::<2, 0, 4>::freeze_param_name::<1>`
 --> $RUST/core/src/panic.rs
  |
  |         $crate::panicking::panic_fmt($crate::const_format_args!($($t)+));
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the failure occurred here
  |
 ::: src/lib.rs
  |
  |         assert!(found_count == 1, "freeze name is ambiguous");
  |         ----------------------------------------------------- in this macro invocation
